# buc-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  devbox.json  pyproject.toml
.github/workflows/: ci.yml
docs/: product-spec.md
docs/adr/: 0001-dual-provider-skills.md  0002-optional-proxy-readiness.md  0003-sync-via-mcp.md
docs/prds/: 0001-feature-server.md  0002-feature-mcp-proxy.md  0003-feature-serverpaths.md  0004-feature-webserver-sync.md  0005-feature-kanban-s3-mcp.md  0005-feature-kanban.md  feature-server.md
k8s/: app.yaml  kustomization.yaml  network.yaml  rbac.yaml
mcpconfigs/: mcp.json
mcps/: mcps.json
prompts/: code_review.py  kubernetes.py  swe.py
prompts/coding/: swe.py
prompts/kubernetes/: kubernetes.py
scripts/: sync.bats  sync.sh  test_sync.sh.bats
skills/coding-passive/awsomeskills_test-driven-development/: SKILL.md
skills/coding-passive/dotai_prd-create/: SKILL.md
skills/coding-passive/dotai_prd-next/: SKILL.md
skills/swe-prd-start/: SKILL.md
src/: mcp.py  metrics.py  server.py  utils.py
src/kanban/: parser.py  s3.py  tools.py
src/kanban_s3/: __init__.py  config.py  parser.py  server.py
tests/: conftest.py  test_health.py  test_kanban_parser.py  test_kanban_s3_parser.py  test_kanban_tools.py  test_mcp_coding.py  test_mcp_context7.py  test_mcp_json_endpoint.py  test_mcp_kubernetes.py  test_mcp_skills.py  test_mcps_json_endpoint.py  test_server.py  test_sync_sh_endpoint.py
tests/e2e/: conftest.py  e2e_actions.py  test_e2e_mcp_prompts.py  test_e2e_mcp_server.py
tests/fixtures/: agentKanban.md  kanban.md
(+16 files in other folders)
