[project]
name = "buc-mcp"
version = "0.5.0"
description = "Central MCP server for shared prompts and skills"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.0.0",
    "fastapi>=0.136.0",
    "uvicorn[standard]",
    "prometheus-client",
    "python-json-logger",
]

[project.scripts]
buc-mcp = "src.server:main"

[dependency-groups]
dev = [
    "pytest",
    "anyio[trio]",
    "httpx",
    "python-semantic-release",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "sed -i 's|image: ghcr.io/thomasbuchinger/buc-mcp:v.*|image: ghcr.io/thomasbuchinger/buc-mcp:v{version}|' k8s/app.yaml"
branch = "main"
commit_message = "chore(release): v{version}"
tag_format = "v{version}"
allow_zero_version = true
